# vb2c

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  tb2c.cpp  vb2c.cpp
include/tb2c/: example.h  lexer.h  token.h
include/vb2c/: emitter.h  lexer.h  parser.h  token.h
src/: CMakeLists.txt  emitter.cpp  example.cpp  lexer.cpp  parser.cpp  token.cpp
tests/: CMakeLists.txt  compiler_test.cpp  lexer_test.cpp  token_test.cpp
